--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -130,11 +130,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.sportina"
+        applicationId "com.sport.ina"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 7
-        versionName "1.0007"
+        versionCode 9
+        versionName "1.0009"
     }
     splits {
         abi {
